# example-servant-persistent

./: .gitignore  .travis.yml  LICENSE  README.md  example-servant-persistent.cabal  stack.yaml
src/: Api.hs  App.hs  Main.hs  Models.hs
test/: AppSpec.hs
